update en el pom.xml del cliente para jacoco